<resources>
    <string name="app_name">Vehical Management</string>
    <string name="management_system">MANAGEMENT SYSTEM</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="exit">Exit</string>
    <string name="about_info">_Contact us to sign up or retrieve your password_</string>
    <string name="my_email">Email: truongdat1408@gmail.com</string>
    <string name="notification">Notification</string>
    <string name="license_plate_notice">LICENSE PLATE NOTICE</string>
</resources>
