<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/kich_thuoc_chuan_gg"
    tools:context=".MainActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:src="@drawable/bien_so" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/management_system"
        android:textColor="#423737"
        android:textSize="30sp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edtUser"
        android:hint="@string/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        />
    <EditText
        android:id="@+id/edtPass"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:inputType="textPassword"
        />
    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="dangNhap"
            android:id="@+id/buttonLogin"
            android:text="@string/login"
            android:layout_marginRight="50dp"
            android:textColor="#D6D6A8"
            android:background="#DD1313"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:onClick="nutThoat"
            android:id="@+id/buttonExit"
            android:text="@string/exit"
            android:textColor="#D6D6A8"
            android:background="#DD1313"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:text="@string/about_info"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/my_email"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>